finished the game
All the functions and features are done I just need to add more styling to the game like changing the colour of the number font

--- a/style.css
+++ b/style.css
@@ -76,8 +76,13 @@ body{
 .tile-hidden{
     border: 2px outset #ffffff;
 }
-.tile-adjective{
+.tile-visible{
     border: 2px solid #adadad;
+}
+
+.img-tile{
+    width: auto;
+    height: 20px;
 }
 
   
