--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@
 body{
     margin: 0rem;
     background-color: var(--main-background-color);
-    position: relative;
 }
 .setting-container{
    text-align: end; 
+   position: fixed;
+   top:0%;
+   right: 0px;
 }
 .setting-button{
     background-color:var(--main-background-color);
@@ -34,13 +36,12 @@ body{
     height: auto;
 }
 .settings-options-container{
-    
     position: fixed;
     top:0px;
     left: 0px;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: 1;
